# packaging_example

./: README.md  docker_compose.yml
helpers/: README.md  pyproject.toml
helpers/src/helpers/: __init__.py
package_a/: Dockerfile  README.md  pyproject.toml
package_a/src/: main.py
package_b/: Dockerfile  README.md  pyproject.toml
package_b/src/: main.py
